// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Component matches child snapshot 1`] = `
<html
  lang="en"
>
  <head>
    <meta
      charSet="utf-8"
    />
    <title>
      Tamsui
    </title>
    <link
      href="/Root CSS module"
      rel="stylesheet"
      type="text/css"
    />
    <link
      href="/static/images/favicon/apple-touch-icon.png"
      rel="apple-touch-icon"
      sizes="180x180"
    />
    <link
      href="/static/images/favicon/favicon-32x32.png"
      rel="icon"
      sizes="32x32"
      type="image/png"
    />
    <link
      href="/static/images/favicon/favicon-16x16.png"
      rel="icon"
      sizes="16x16"
      type="image/png"
    />
    <link
      href="/static/site.webmanifest"
      rel="manifest"
    />
    <meta
      content="width=device-width"
      name="viewport"
    />
  </head>
  <body>
    <h1>
      App Child Component
    </h1>
  </body>
</html>
`;

exports[`App Component matches no-child snapshot 1`] = `
<html
  lang="en"
>
  <head>
    <meta
      charSet="utf-8"
    />
    <title>
      Tamsui
    </title>
    <link
      href="/Root CSS module"
      rel="stylesheet"
      type="text/css"
    />
    <link
      href="/static/images/favicon/apple-touch-icon.png"
      rel="apple-touch-icon"
      sizes="180x180"
    />
    <link
      href="/static/images/favicon/favicon-32x32.png"
      rel="icon"
      sizes="32x32"
      type="image/png"
    />
    <link
      href="/static/images/favicon/favicon-16x16.png"
      rel="icon"
      sizes="16x16"
      type="image/png"
    />
    <link
      href="/static/site.webmanifest"
      rel="manifest"
    />
    <meta
      content="width=device-width"
      name="viewport"
    />
  </head>
  <body />
</html>
`;
